-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.13
-
Component/s: None
-
Labels:
-
Guilty Commit:0.4.13-dev-1133-ga3ee648d8b641604a87fcc3733d0946ced056074
0.4.13-dev-1176-g432854e gcc dbg win
Reproduction steps
-select "search" from startmenu
-search for *.exe within C:
-right click arbitrary .exe in results and select "Open Containing folder"
Expected result
a filebrowser should open up in the containing folder and the exe should be selected
Observed result
nothing happens, but it points to the culprit
err:(dll/win32/shell32/shlfolder.cpp:394) SHOpenFolderAndSelectItems() is hackplemented
|
(dll/win32/kernel32/client/loader.c:386) LoadLibraryExW(rshell.dll) failing with status c0000135
|
(win32ss/user/ntuser/focus.c:1519) err: ptiLastInput is SET!!
|
Please note, that the function is "hackplemented good enough" atm to open the containing folder for a completed filedownload from the Firefox downloads view.
- relates to
-
CORE-9367 SHOpenFolderAndSelectItems is hackplemented
-
- Open
-