[0.4.13][BROWSEUI][SHELLFIND] Allow to 'Open Containing Folder' CORE-16391

of a search result again.

The feature regressed by 0.4.13-dev-1133-g
a3ee648d8b641604a87fcc3733d0946ced056074

I chose the shorter solution of Brock Mammen instead
of the patch of Doug Lyons from PR1960.

Still many thanks to Doug Lyons for his encouragement
in creating a fix as well and performing
regression-testing.

cherry picked from commit 0.4.14-dev-39-g
cd2a274ef7fcf42f24b634ffa5b4de3ce299e1e4